added "hide configuration controls" button

--- a/conf/yarden.mytools.codecontroller.presentation.implementations.tornadofx.GlobalConfig.properties
+++ b/conf/yarden.mytools.codecontroller.presentation.implementations.tornadofx.GlobalConfig.properties
@@ -1,5 +1,6 @@
 #
-#Sat Feb 01 20:09:27 IST 2020
+#Sat Feb 01 22:32:05 IST 2020
+vector2_XYControl={"value"\:{"x"\:0.24666666666666667,"y"\:0.7266666666666667}}
 test0_Slider={"value"\:4.50909090909091}
-testing_XYControl={"value"\:{"x"\:83.66,"y"\:84.13}}
+testing_XYControl={"value"\:{"x"\:86.46666666666667,"y"\:60.8}}
 new\ feature_Toggle={"value"\:false}
